# lex-without-lex

./: .env.example  .gitignore  Dockerfile  fly.toml  pyproject.toml
.claude/hooks/: session-start.sh
.github/workflows/: deploy.yml
src/lex_without_lex/: audio.py  chapters.py  config.py  downloader.py  editor.py  feed_parser.py  models.py  pipeline.py  server.py  storage.py  transcriber.py  tts.py
src/lex_without_lex/templates/: feed.xml.j2
tests/: conftest.py  llm_judge.py  test_audio.py  test_chapters.py  test_downloader.py  test_edit_quality.py  test_editor.py  test_feed_parser.py  test_pipeline.py  test_server.py  test_transcriber.py  test_tts.py
tests/fixtures/: golden_edit_jensen_intro.json  sample_edit_list.json  sample_feed.xml  sample_transcript.json  scenario_jensen_intro.json
