[project]
name = "lex-without-lex"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28",
    "feedparser>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "b2sdk>=2.0",
    "apscheduler>=3.10,<4.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "pytest-cov>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lex_without_lex"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "llm_judge: tests that call the Gemini API for quality evaluation (require LWL_GEMINI_API_KEY)",
    "integration: tests that call external APIs (Claude + Gemini)",
]
